--- a/bio.html
+++ b/bio.html
@@ -30,8 +30,10 @@ currently working on his second novel, tentatively titled Stealing Heaven.">
 <input type=checkbox id=nav-trigger class=nav-trigger />
 <label for=nav-trigger></label>
 <div class=site-wrap>
-<div id=menus class=col-md-2>
+<div id=menus class=col-md-3>
 <ul class=menu>
+    <li id="headline" class="title">MD Moore</li>
+    <li class='sub-header'> Author</li>
 <li><a href=index.html>Home</a></li>
 <li><a href=bio.html>Bio</a></li>
 <li><a href=bookpage.html>Book Page</a></li>
@@ -55,7 +57,7 @@ currently working on his second novel, tentatively titled <span class=book_under
 <p>He can be contacted <a href=contact.html>here</a>.</p>
 </div>
 <div class='col-md-4 pull-right bio'>
-<img src="files/mdmoore.jpg" alt='Michael Moore' width=250>
+<img class="img-responsive" src="files/mdmoore.jpg" alt='Michael Moore'>
 </div>
 </div>
 </div>
